src2/objects/Asset_Operational_Status_Matrix__mdt.object
<CustomObject>
    <fields>
        <fullName>Operational_Status_Coffe1__c</fullName>
        <label>Operational Status Coffee1</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operational_Status_Coffe2__c</fullName>
        <label>Operational Status Coffee2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operational_Status_Milk__c</fullName>
        <label>Operational Status Milk</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operational_Status_Result__c</fullName>
        <label>Operational Status Result</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Asset Operational Status Matrix</label>
    <pluralLabel>Assets Operational Status Matrix</pluralLabel>
</CustomObject>